# thesibyl

./: LICENCE  README  README.md
doc/: INSTALL.pod  Makefile  TODO  download.pod  faq.pod  getting_user_cred.osx  pam_sibyl.pod  protocol.pod  requirements_sibyl.rtf  shadow2sibyl.pod  sibyl-doc.aux  sibyl-doc.ltx  sibyl-doc.pdfsync  sibyl.pod  sibyl_srv.pod  technical.pod
doc/sibyl_step_by_step/: crypt  crypt.c  sibyl_step_by_step.html  sibyl_step_by_step.pod  sibyl_step_by_step.txt.rcs
src/: Makefile  Makefile.am  Makefile.default  Makefile.inc  Makefile.linux  Makefile.osx  TODO  bootstrap.sh  configure.ac  sibyl.conf
src/client/: Makefile  get_keys.pl  pam_exec.c  pam_sibyl.c  pam_sibyl.h  pam_sm_authtok_todo  sibyl_client.pl  sibyl_support.c  translate_client.pl
src/keys/: Makefile  automake.inc
src/lib/: Makefile  bsd-base64.c  bsd-base64.h  crypt.c  shadow2sibyl.pl  sibyl.h  sibyl.pm
src/perl_modules/: modules.txt
src/server/: Makefile  Makefile.osx  TODO  automake.inc  generate.pl  sibyl_srv.c  sibyl_srv.pl  sibyl_srv_ioselect.pl  sibyl_srv_support.c  sibyl_srv_support.h
